Adjust search field alignment

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<img src="images/universal/searchicon_home.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px;right: 20px;position: absolute;cursor:pointer" />
 		</div> 
 
-		 <div class="cse-branding-bottom hidden-xs col-sm-4 search-container" style="margin-top: 16px">  
+		 <div class="cse-branding-bottom hidden-xs col-sm-4 search-container">  
 			<form name="cse_searchbox" action="https://cmhc.utexas.edu/search.html" method="get" id="cse_searchbox"> 
 				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li" /> 
 				<input type="hidden" name="cof" value="FORID:11" />
