--- a/include_universalfooter.html
+++ b/include_universalfooter.html
@@ -4,8 +4,8 @@
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
     <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
-        <div class="col-sm-3 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
-            <br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3" align="top" />
+        <div class="col-sm-4 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
+            <br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3"  class="img-responsive" align="top" />
 
 
             <div class="row row-nested-space">
@@ -50,7 +50,7 @@
                 <div class="col-xs-12">
                     <br/>
                     <center>
-                        <a href="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" width="185" /></a>
+                        <a href="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" class="img-responsive" /></a>
                     </center>
                 </div>
 
@@ -60,37 +60,38 @@
 
 
 
-        <div class="col-sm-6 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
+        <div class="col-sm-5 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
             <div class="row">
 
-                <div class="col-sm-12 col-xs-12">
-
-                    <br/><br/><center><span class="homepageheader_groups3">Helpful Information</span></center>
-                </div>
 
 
+                <br/><br/><center><span class="homepageheader_groups3">Helpful Information</span></center>
+
+            </div>
 
 
+            <div class="row">
                 <div class="col-sm-12 col-xs-12">
                     <div class="col-sm-5 col-xs-6 custom4">
                         <a class="a_class_dropdown" href="#">Contact CMHC</a>
                         <br/> <br/><a class="a_class_dropdown" href="#">About CMHC</a>
                         <br/> <br/><a class="a_class_dropdown" href="#">Questions & answers</a>
+                        <br/> <br/><a class="a_class_dropdown" href="#">Crisis services</a>
+                        <br/> <br/><a class="a_class_dropdown" href="#">Get involved</a>
                         <br/> <br/><a class="a_class_dropdown" href="#">Confidentiality</a>
                         <br/> <br/><a class="a_class_dropdown" href="#">Diversity</a>
                         <br/> <br/><a class="a_class_dropdown" href="#">Mission & vision</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Get involved</a>
+
                         <br/> <br/><a class="a_class_dropdown" href="#">Service extension fee</a>
                         <br/> <br/><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</a>
                     </div>
 
-                    <div class="col-sm-1 hidden-xs">
-                        <center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="400" /></center>
-                    </div>
-                    <div class="col-sm-6 col-xs-6 custom5">
+
+                    <div class="col-sm-7 col-xs-6 custom5">
                         <a class="a_class_dropdown" href="#">Groups & Classes</a>
                         <br/> <br/> <a class="a_class_dropdown" href="#">MindBody Lab</a>
                         <br/> <br/> <a class="a_class_dropdown" href="#">Medication & psychiatric services</a>
+                        <br/> <br/> <a class="a_class_dropdown" href="#">Common Student Concerns</a>
                         <br/> <br/> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</a>
                         <br/> <br/> <a class="a_class_dropdown" href="#">Research Consortium</a>
                         <br/> <br/> <a class="a_class_dropdown" href="#">Graduate training programs</a>
@@ -114,10 +115,10 @@
             <div class="row">
                 <center>
                     <div class="visible-xs col-xs-2"></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" class="img-responsive" /></a></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook" class="img-responsive"/></a></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook"class="img-responsive" /></a></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook"class="img-responsive" /></a></div>
+                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" width="40"/></a></div>
+                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook"  width="40"/></a></div>
+                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook" width="40" /></a></div>
+                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook" width="40" /></a></div>
                     <div class="visible-xs col-xs-2"></div>
                 </center>
             </div><!-- :::::::::::::::: END 3rd column in footer ::::::::::::::::::::::: -->
@@ -129,11 +130,11 @@
     <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
         <div class="col-sm-12 col-xs-12">
             <div class="row">
-                <div class="col-sm-offset-3 col-sm-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12">
                     <a href="#"><img src="images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="40" class="img-responsive" /></a>
                 </div>
 
-                <div class="col-sm-offset-3 col-sm-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12">
                     <a href="#"><img src="images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="30" class="img-responsive" /></a>
                 </div>
             </div>
