--- a/secondary.html
+++ b/secondary.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="common.css">
 	<script src="js/jquery-3.1.1.min.js"></script>
+	<script src="js/bootstrap-toolkit.min.js"></script>
 	<link rel="icon"
 		  type="image/png"
 		  href="http://www.utexas.edu/favicon.ico">
