--- a/include_universalheader.html
+++ b/include_universalheader.html
@@ -255,17 +255,6 @@
 </div>
 
 <script>
-    $(".dropbtn").click(function() {
-        $(this).next(".dropdown-content").toggle();
-        if ($(this).find(".fa-angle-double-down").is(":visible")) {
-            $(this).find(".fa-angle-double-up").show();
-            $(this).find(".fa-angle-double-down").hide();
-        } else if ($(this).find(".fa-angle-double-up").is(":visible")) {
-            $(this).find(".fa-angle-double-up").hide();
-            $(this).find(".fa-angle-double-down").show();
-        }
-    });
-
     $(".submenubtn").click(function(e) {
         e.preventDefault();
         $(this).find(".sub-dropdown-content").toggle();
@@ -274,6 +263,53 @@
     });
 
     (function($, viewport){
+        $(".dropbtn").hover(function() {
+            if (viewport.is('lg')) {
+                $(this).next(".dropdown-content").show();
+            }
+        }, function() {
+            if (viewport.is('lg')) {
+                if (!$(this).next(".dropdown-content").is(":hover")) {
+                    $(this).next(".dropdown-content").hide();
+                }
+            }
+        });
+
+        $(".dropdown-content").hover(function () {
+
+        }, function() {
+            if (viewport.is('lg') && !$(this).hasClass('sub-dropdown-content')) {
+                $(this).hide();
+            }
+        });
+
+        $(".dropbtn").click(function() {
+            if (viewport.is('<lg')) {
+                var isShow = false;
+                if (!$(this).next(".dropdown-content").is(":visible")) {
+                    isShow = true;
+                }
+
+                $(".dropdown-content").hide();
+
+                if (isShow) {
+                    $(this).next(".dropdown-content").show();
+                }
+
+                if (viewport.is('xs')) {
+                    $(this).parent().parent().parent().find(".fa-angle-double-down").show();
+                    $(this).parent().parent().parent().find(".fa-angle-double-up").hide();
+
+                    if ($(this).next(".dropdown-content").is(":visible")) {
+                        $(this).find(".fa-angle-double-up").show();
+                        $(this).find(".fa-angle-double-down").hide();
+                    } else {
+                        $(this).find(".fa-angle-double-up").hide();
+                        $(this).find(".fa-angle-double-down").show();
+                    }
+                }
+            }
+        });
 
         $(document).ready(function() {
             if(viewport.is('xs')) {
