Integrate Blake’s changes

--- a/include_universalfooter.html
+++ b/include_universalfooter.html
@@ -1,152 +1,162 @@
 <!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::   BEGIN FOOTER   :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
-
-
+</div>
+<BR/><BR/>
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
-    <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
-        <div class="col-sm-4 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
-            <br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3"  class="img-responsive" align="top" />
-
-
-            <div class="row row-nested-space">
-                <div class="col-xs-12-footerbox">
-                    <a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Meet the staff</a>
-                </div>
-
-            </div>
-
-            <div class="row row-nested-space">
-                <div class="col-xs-12-footerbox">
-                    <a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Are you new to UT?</a>
-                </div>
-            </div>
-
-            <div class="row row-nested-space">
-                <div class="col-xs-12-footerbox">
-                    <a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Common Concerns</a>
-                </div>
-            </div>
-
-            <div class="row row-nested-space">
-                <div class="col-xs-12-footerbox">
-                    <a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Integrated Health</a>
-                </div>
-            </div>
-
-            <div class="row row-nested-space">
-                <div class="col-xs-12-footerbox">
-                    <a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Parents & families</a>
-                </div>
-            </div>
-
-            <div class="row row-nested-space">
-                <div class="col-xs-12-footerbox">
-                    <a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Faculty & Staff</a>
-                </div>
-            </div>
+		<div class="col-sm-4 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
+			<br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3"  class="img-responsive" align="top" />
 
 
-            <div class="row row-nested-space">
-                <div class="col-xs-12">
-                    <br/>
-                    <center>
-                        <a href="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" class="img-responsive" /></a>
-                    </center>
-                </div>
+			<div class="row row-nested-space">
+				<div class="col-xs-12-footerbox">
+					<a class="btn-info-main btn-block custom" href="https://test.cmhc.utexas.edu/REDESIGN2017/staff.html">&nbsp;&nbsp;Meet the staff</a>
+				</div>
 
-            </div>
-        </div><!-- :::::::::::::::: END  first column in footer ::::::::::::::::::::::: -->
+			</div>
+
+			<div class="row row-nested-space">
+				<div class="col-xs-12-footerbox">
+					<a class="btn-info-main btn-block custom" href="https://test.cmhc.utexas.edu/REDESIGN2017/incomingstudents/index.html">&nbsp;&nbsp;Are you new to UT?</a>
+				</div>
+			</div>
+
+			<div class="row row-nested-space">
+				<div class="col-xs-12-footerbox">
+					<a class="btn-info-main btn-block custom" href="https://test.cmhc.utexas.edu/REDESIGN2017/commonconcerns.html">&nbsp;&nbsp;Common Concerns</a>
+				</div>
+			</div>
+
+			<div class="row row-nested-space">
+				<div class="col-xs-12-footerbox">
+					<a class="btn-info-main btn-block custom" href="https://test.cmhc.utexas.edu/REDESIGN2017/integratedhealth.html">&nbsp;&nbsp;Integrated Health</a>
+				</div>
+			</div>
+
+			<div class="row row-nested-space">
+				<div class="col-xs-12-footerbox">
+					<a class="btn-info-main btn-block custom" href="https://test.cmhc.utexas.edu/REDESIGN2017/parents.html">&nbsp;&nbsp;Parents & families</a>
+				</div>
+			</div>
+
+			<div class="row row-nested-space">
+				<div class="col-xs-12-footerbox">
+					<a class="btn-info-main btn-block custom" href="https://test.cmhc.utexas.edu/REDESIGN2017/facultyandstaff.html">&nbsp;&nbsp;Faculty & Staff</a>
+				</div>
+			</div>
 
 
+			<div class="row row-nested-space">
+				<div class="col-xs-12">
+					<br/>
+					<center>
+						<a href="https://utdirect.utexas.edu/apps/utgiving/online/nlogon/?menu1=VSCN"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" class="img-responsive" /></a>
+					</center>
+				</div>
 
-
-        <div class="col-sm-5 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
-            <div class="row">
+			</div>
+		</div><!-- :::::::::::::::: END  first column in footer ::::::::::::::::::::::: -->
 
 
 
-                <br/><br/><center><span class="homepageheader_groups3">Helpful Information</span></center>
 
-            </div>
+		<div class="col-sm-5 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
+			<div class="row">
 
+			
 
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <div class="col-sm-5 col-xs-6 custom4">
-                        <a class="a_class_dropdown" href="#">Contact CMHC</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">About CMHC</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Questions & answers</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Crisis services</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Get involved</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Confidentiality</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Diversity</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Mission & vision</a>
-
-                        <br/> <br/><a class="a_class_dropdown" href="#">Service extension fee</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</a>
-                    </div>
+					<br/><br/><center><span class="homepageheader_groups3">Helpful Information</span></center>
+				
+</div>
 
 
-                    <div class="col-sm-7 col-xs-6 custom5">
-                        <a class="a_class_dropdown" href="#">Groups & Classes</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">MindBody Lab</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">Medication & psychiatric services</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">Common Student Concerns</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">Research Consortium</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">Graduate training programs</a>
-                        <br/> <br/> <a class="a_class_dropdown" href="#">Clearinghouse abstracts</a>
-                        <br/> <br/><a class="a_class_dropdown" href="#">Forms</a>
-                    </div>
-                </div>
-            </div>
+<div class="row">
+				<div class="col-sm-12 col-xs-12">
+					<div class="col-sm-5 col-xs-6 custom4">
+						<a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html">Contact CMHC</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">About CMHC</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/questions.html">Questions & answers</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/crisishelp.html">Crisis services</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/getinvolved.html">Get involved</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/confidentiality.html">Confidentiality</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/diversity.html">Diversity</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">Mission & vision</a>
+						
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/serviceextension_cmhc.html">Service extension fee</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://www.healthyhorns.utexas.edu/medicalwithdrawals.html">Medical widthdrawals & course load reductions</a>
+					</div>
 
-        </div><!-- :::::::::::::::: END middle column in footer ::::::::::::::::::::::: -->
+
+					<div class="col-sm-7 col-xs-6 custom5">
+						<a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/groups.html">Groups & Classes</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/mindbodylab.html">MindBody Lab</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/medications.html">Medication & psychiatric services</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/commonconcerns.html">Common Student Concerns</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/counseling_resources.html">Off-campus counseling & mental health services</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/researchconsortium.html">Research Consortium</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/graduatetraining.html">Graduate training programs</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/clearinghouse/index.html">Clearinghouse abstracts</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/forms.html">Forms</a>
+					</div>
+				</div>
+			</div>
+
+		</div><!-- :::::::::::::::: END middle column in footer ::::::::::::::::::::::: -->
 
 
-        <div class="col-sm-3 col-xs-12"><!-- :::::::::::::::: 3rd column in footer ::::::::::::::::::::::: -->
-            <center>
-                <br/><br/><a href="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></a>
-                <br/><a href="#"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" /></a>
-                <br/><a href="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></a>
-                <br/>
-            </center>
+		<div class="col-sm-3 col-xs-12"><!-- :::::::::::::::: 3rd column in footer ::::::::::::::::::::::: -->
+			<center>
+				<br/><br/><a href="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></a>
+				<br/><a href="thrive/index.html"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" /></a>
+				<br/><a href="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></a>
+				<br/>
+			</center>
 
-            <div class="row">
-                <center>
-                    <div class="visible-xs col-xs-2"></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" width="40"/></a></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook"  width="40"/></a></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook" width="40" /></a></div>
-                    <div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook" width="40" /></a></div>
-                    <div class="visible-xs col-xs-2"></div>
-                </center>
-            </div><!-- :::::::::::::::: END 3rd column in footer ::::::::::::::::::::::: -->
-        </div>
-    </div>
+			<div class="row">
+				<center>
+				<div class="visible-xs col-xs-2"></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://www.facebook.com/utcmhc"><img src="images/universal/icon_footerfacebook.png" alt="facebook" width="40"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://twitter.com/UT_CMHC"><img src="images/universal/icon_footertwitter.png" alt="twitter"  width="40"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://www.instagram.com/UTaustinVAV/"><img src="images/universal/icon_footerinstagram.png" alt="instagram" width="40" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://www.youtube.com/user/TheCMHC"><img src="images/universal/icon_footeryoutube.png" alt="youtube" width="40" /></a></div>
+				<div class="visible-xs col-xs-2"></div>
+				</center>
+			</div><!-- :::::::::::::::: END 3rd column in footer ::::::::::::::::::::::: -->
+		</div>
+	</div>
 </div>
 
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
-    <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
-        <div class="col-sm-12 col-xs-12">
-            <div class="row">
-                <div class="col-sm-6 col-xs-12">
-                    <a href="#"><img src="images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="40" class="img-responsive" /></a>
-                </div>
+	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+		<div class="col-sm-12 col-xs-12">
+			<div class="row">
+			
+			<div class="col-sm-12 hidden-xs">
+			<center><br/><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
+		</div>
+				<div class="col-sm-6 col-xs-12">
+					<BR><BR><a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/index.html"><img src="images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="0" class="img-responsive" /></a>
+				</div>
 
-                <div class="col-sm-6 col-xs-12">
-                    <a href="#"><img src="images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="30" class="img-responsive" /></a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-xs-12">
-            <center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
-        </div>
+				<div class="col-sm-6 col-xs-12">
+					<BR><BR><a href="https://test.cmhc.utexas.edu/REDESIGN2017/bethatone/index.html"><img src="images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="0" class="img-responsive" /></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-12  col-xs-12">
+			<center><br/><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/greyfooterline.png" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
+		</div>
 
-        <div class="col-sm-12 col-xs-12">
-            <center><a class="a_class_footer" href="#">&copy;2017 The University of Texas at Austin</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><a class="a_class_footer" href="#">UT Emergency Information</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Accessibility</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Report a Bias Incident</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Staff Intranet</a>
-                <br/><br/><br/><br/><br/>
-            </center>
-        </div>
-    </div>
+		<div class="col-sm-12 hidden-xs">
+			<center><a class="a_class_footer" href="https://test.cmhc.utexas.edu/REDESIGN2017/copyright.html">&copy;2017 The University of Texas at Austin</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><a class="a_class_footer" href="http://emergency.utexas.edu/">UT Emergency Information</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://cio.utexas.edu/policies/web-accessibility">Accessibility</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://cio.utexas.edu/policies/web-privacy">Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://app.smartsheet.com/b/form?EQBCT=11b77a5089cc4d6b9226bb17e6f79a2d">Report a Bias Incident</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://test.cmhc.utexas.edu/REDESIGN2017/STAFF/index.html">Staff Intranet</a>
+				<br/><br/><br/><br/><br/>
+			</center>
+		</div>
+		
+		<div class="visible-xs col-xs-12">
+			<center><a class="a_class_footer" href="https://test.cmhc.utexas.edu/REDESIGN2017/copyright.html">&copy;2017 The University of Texas at Austin</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://cio.utexas.edu/policies/web-accessibility">Accessibility</a><BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="http://emergency.utexas.edu/">UT Emergency Information</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://cio.utexas.edu/policies/web-privacy">Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<BR><a class="a_class_footer" href="https://app.smartsheet.com/b/form?EQBCT=11b77a5089cc4d6b9226bb17e6f79a2d">Report a Bias Incident</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="https://test.cmhc.utexas.edu/REDESIGN2017/STAFF/index.html">Staff Intranet</a>
+				<br/><br/><br/><br/><br/>
+			</center>
+		</div>
+	</div>
 </div>
