--- a/search.html
+++ b/search.html
@@ -3,29 +3,29 @@
 <head>
  <meta charset="UTF-8">
  <script src="question.js" type="text/javascript"></script>
- 
- 
+
+
  <!--  __________________________________________________________________________P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
- 
- 
+
+
   <title>Search Results</title>
   <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
 <meta name="KeyWords" content="search">
 
-  
-  
-  
+
+
+
    <!--  __________________________________________________________________________E N D   P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
-   
-   
-   
+
+
+
     <!-- Bootstrap -->
  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="common.css">
-  
-  
-  
+
+
+
  <script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap-toolkit.min.js"></script>
 	<link rel="icon"
@@ -64,7 +64,7 @@
 <div class="row-content">
 <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
-	
+
 <meta name = "format-detection" content = "telephone=no">
 
 <H1 class="H1">Search Results</H1>
@@ -82,7 +82,7 @@
             <script type="text/javascript" src="bootstrap/js/search.js"></script>
 
 <style>
-#cse-search-results iframe {width: 100%; height:100% !important;}
+#cse-search-results iframe {width: 100%; height:1200px !important;}
 </style>
 <script type="text/javascript">
 		try{document.getElementsByName('googleSearchFrame')[0].height=1260;}catch(e){}
